--- a/LeetCode/java/src/templates/窗口类指针移动模板.md
+++ b/LeetCode/java/src/templates/窗口类指针移动模板.md
@@ -1,4 +1,5 @@
 2层循环滑动左右指针
+for loop 自动i++，只需关注while loop什么条件j++
 int i, j;
 for (i = 0, j = 0; i < n; i++) { // move left ptr
     while (j < n) {
@@ -15,9 +16,7 @@ for (i = 0, j = 0; i < n; i++) { // move left ptr
 }
 
 
-for loop 自动i++，只需关注while loop什么条件j++
-
- 
+## Questions
 [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/description/)
 [76. Minimum Window Substring](https://leetcode.com/problems/minimum-window-substring/description/)
 [209. Minimum Size Subarray Sum](https://leetcode.com/problems/minimum-size-subarray-sum/description/)
